--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@
 yarn-debug.log*
 .yarn-integrity
 /config/local_env.yml
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
