--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,11 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
+deployment: &deployment
+  adapter: postgresql
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+
 development:
   <<: *default
   database: db/development.sqlite3
@@ -21,7 +26,7 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
+  <<: *deployment
   url: <%= ENV['DATABASE_URL'] %>
   # database: <%= ENV['RDS_DB_NAME'] %>
   # username: <%= ENV['RDS_USERNAME'] %>
