--- a/.ebextensions/01_rails_setup.config
+++ b/.ebextensions/01_rails_setup.config
@@ -74,7 +74,9 @@ commands:
     ignoreErrors: true
   16_chown_current:
     command: "sudo chmod 0644 -R /var/app/ondeck/"
-    ignoreErrors: truecontainer_commands:
+    ignoreErrors: true
+
+container_commands:
   17_config_nokogiri:
     command: "bundle config build.nokogiri --use-system-libraries"
   18_gem_install_pg:
