--- a/.ebextensions/01_rails_setup.config
+++ b/.ebextensions/01_rails_setup.config
@@ -17,12 +17,12 @@ packages:
     curl: []
     wget: []
     openssl-devel: []
-    postgresql-devel: []
+    postgresql94-devel: []
     amazon-linux-extras: []
 
 commands:
   01_postgres_install:
-    command: sudo yum install -y postgresql-devel
+    command: sudo yum install -y postgresql94-devel
   02_node_download:
     cwd: /tmp
     command: "curl --silent --location https://rpm.nodesource.com/setup_10.x | sudo bash -"
