--- a/.ebextensions/01_rails_setup.config
+++ b/.ebextensions/01_rails_setup.config
@@ -22,7 +22,7 @@ packages:
 
 commands:
   01_postgres_install:
-    command: sudo yum install -y postgresql-devel
+    command: sudo apt-get install -y libpq-dev
   02_node_download:
     cwd: /tmp
     command: "curl --silent --location https://rpm.nodesource.com/setup_10.x | sudo bash -"
