--- a/.ebextensions/01_rails_setup.config
+++ b/.ebextensions/01_rails_setup.config
@@ -17,75 +17,76 @@ packages:
     curl: []
     wget: []
     openssl-devel: []
-    postgresql-devel: []
     amazon-linux-extras: []
 
 commands:
-  01_postgres_install:
-    command: sudo apt-get install -y libpq-dev
-  02_node_download:
+  01_postgres_activate:
+    command: sudo amazon-linux-extras enable postgresql10
+  02_postgres_install:
+    command: sudo yum install -y postgresql-devel
+  03_node_download:
     cwd: /tmp
     command: "curl --silent --location https://rpm.nodesource.com/setup_10.x | sudo bash -"
     ignoreErrors: true
-  03_node_install:
+  04_node_install:
     cwd: /tmp
     command: "sudo yum install nodejs -y"
     ignoreErrors: true
-  04_yarn_download:
+  05_yarn_download:
     cwd: /tmp
     test: '[ ! -f /usr/bin/yarn ] && echo "yarn not installed"'
     command: "sudo wget https://dl.yarnpkg.com/rpm/yarn.repo -O /etc/yum.repos.d/yarn.repo"
     ignoreErrors: true
-  05_yarn_install:
+  06_yarn_install:
     cwd: /tmp
     test: '[ ! -f /usr/bin/yarn ] && echo "yarn not installed"'
     command: "sudo yum install yarn -y"
     ignoreErrors: true
-  06_mkdir_webapp_dir:
+  07_mkdir_webapp_dir:
     test: '[ ! -p /home/webapp ] && echo "webapp does not exist"'
     command: "sudo mkdir -p /home/webapp"
     ignoreErrors: true
-  07_chown_webapp_dir:
+  08_chown_webapp_dir:
     test: '[ ! -p /home/webapp ] && echo "webapp does not exist"'
     command: "sudo chown webapp:webapp /home/webapp"
     ignoreErrors: true
-  08_chmod_webapp_dir:
+  09_chmod_webapp_dir:
     test: '[ ! -p /home/webapp ] && echo "webapp does not exist"'
     command: "sudo chmod 0744 /home/webapp"
     ignoreErrors: true
-  09_mkdir_logs:
+  10_mkdir_logs:
     command: "sudo mkdir -p /var/app/current/log/"
-  10_chmod_logs:
+  11_chmod_logs:
     command: "sudo chown webapp:webapp -R /var/app/current/log/"
     ignoreErrors: true
-  11_chmod_log_dir:
+  12_chmod_log_dir:
     command: "sudo chmod 0664 -R /var/app/current/log/"
     ignoreErrors: true
-  12_chown_current:
+  13_chown_current:
     command: "sudo chown webapp:webapp -R /var/app/current/"
     ignoreErrors: true
-  13_chmod_current:
+  14_chmod_current:
     command: "sudo chmod 0755 -R /var/app/current/"
     ignoreErrors: true
-  14_chown_current:
+  15_chown_current:
     command: "sudo chown webapp:webapp -R /var/app/ondeck/"
     ignoreErrors: true
-  15_chown_current:
+  16_chown_current:
     command: "sudo chmod 0644 -R /var/app/ondeck/"
     ignoreErrors: true
 
 container_commands:
-  16_config_nokogiri:
+  17_config_nokogiri:
     command: "bundle config build.nokogiri --use-system-libraries"
-  17_gem_install_pg:
+  18_gem_install_pg:
     command: "gem install pg -v 1.3.4 -- --with-cflags='-Wno-error=implicit-function-declaration'"
-  18_bundle_install:
+  19_bundle_install:
     command: "bundle install"
-  19_yarn_install:
+  20_yarn_install:
     command: "yarn install --check-files --force --production"
-  20_asset_precompile:
+  21_asset_precompile:
     command: "NODE_ENV=production bundle exec rails assets:precompile --trace"
-  21_webpacker_compile:
+  22_webpacker_compile:
     command: "NODE_ENV=production bundle exec rails webpacker:compile --trace"
-  22_db_migrate:
+  23_db_migrate:
     command: "bundle exec rails db:migrate"
