--- a/.ebextensions/01_rails_setup.config
+++ b/.ebextensions/01_rails_setup.config
@@ -80,9 +80,8 @@ container_commands:
     command: "bundle config build.nokogiri --use-system-libraries"
   18_bundle_install:
     command: "bundle install"
-  20_asset_precompile:
-    command: "NODE_ENV=production bundle exec rails assets:precompile --trace"
-  21_webpacker_compile:
-    command: "NODE_ENV=production bundle exec rails webpacker:compile --trace"
+  19_assets:
+    command: RAILS_ENV=production bundle exec rake assets:precompile
+    leader_only: true
   22_db_migrate:
     command: "bundle exec rails db:migrate"
