--- a/.ebextensions/01_rails_setup.config
+++ b/.ebextensions/01_rails_setup.config
@@ -81,7 +81,7 @@ container_commands:
   18_bundle_install:
     command: "bundle install"
   19_assets:
-    command: RAILS_ENV=production bundle exec rake assets:precompile
+    command: bundle exec rake assets:precompile
     leader_only: true
   22_db_migrate:
     command: "bundle exec rails db:migrate"
