new aws configs

--- a/.ebextensions/01_rails_setup.config
+++ b/.ebextensions/01_rails_setup.config
@@ -8,6 +8,7 @@ option_settings:
     RAILS_SKIP_MIGRATIONS: true
     RAILS_SKIP_ASSET_COMPILATION: true
     RAILS_ENV: production
+    NODE_ENV: production
     DATABASE_URL: postgresql://postgres:Jucineidu73@ENDPOINT:5432/events_platform_db
     LOGGING: debug
 
