--- a/config/database.yml
+++ b/config/database.yml
@@ -27,9 +27,9 @@ test:
 
 production:
   <<: *deployment
-  url: <%= ENV['DATABASE_URL'] %>
+  # url: <%= ENV['DATABASE_URL'] %>
   database: <%= ENV['RDS_DB_NAME'] %>
-  # username: <%= ENV['RDS_USERNAME'] %>
-  # password: <%= ENV['RDS_PASSWORD'] %>
-  # host: <%= ENV['RDS_HOSTNAME'] %>
-  # port: <%= ENV['RDS_PORT'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
