--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,7 @@ test:
 
 production:
   <<: *deployment
-  # url: <%= ENV['DATABASE_URL'] %>
+  encoding: utf8
   database: <%= ENV['RDS_DB_NAME'] %>
   username: <%= ENV['RDS_USERNAME'] %>
   password: <%= ENV['RDS_PASSWORD'] %>
